--- a/package.json
+++ b/package.json
@@ -15,8 +15,22 @@
     "chai": "^4.1.2",
     "eslint": "^5.9.0",
     "htmlhint": "^0.10.1",
-    "mocha": "^5.1.1",
+    "mocha": "^5.2.0",
     "nyc": "^13.1.0",
     "opener": "^1.4.3"
-  }
+  },
+  "description": "Cifrar significa codificar. El [cifrado César](https://en.wikipedia.org/wiki/Caesar_cipher) es uno de los primeros métodos de cifrado conocidos. El emperador romano Julio César lo usaba para enviar órdenes secretas a sus generales en los campos de batalla.",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JanetGM/lim-2018-11-bc-core-am-cipher.git"
+  },
+  "keywords": [],
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/JanetGM/lim-2018-11-bc-core-am-cipher/issues"
+  },
+  "homepage": "https://github.com/JanetGM/lim-2018-11-bc-core-am-cipher#readme"
 }
