--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "npm run test-node && npm run test-browser"
   },
   "dependencies": {
+    "animate.css": "^3.7.2",
     "chai": "^4.1.2",
     "eslint": "^5.9.0",
     "htmlhint": "^0.10.1",
